interfacegw-endpoint/endpoint-sg.tf
resource "aws_security_group" "sg_endpoint" {
  name        = "sg_endpoint"
  description = "Allow https inbound traffic"
  vpc_id      = aws_vpc.main.id

 
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "sg_endpoint"
  }
}
